[package]
name = "reroute"
version = "0.4.0"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
description = "A router that can use regular expressions for the hyper package"
repository = "https://github.com/gsquire/reroute"
keywords = ["http", "hyper"]
documentation = "https://docs.rs/reroute"
license = "MIT"

[dependencies]
futures = "0.1"
hyper = "0.12"
regex = "1.0"
