[package]
name = "reroute"
edition = "2018"
version = "0.4.1"
authors = ["Garrett Squire <garrettsquire@gmail.com>"]
description = "A router that can use regular expressions for the hyper package"
repository = "https://github.com/gsquire/reroute"
keywords = ["http", "hyper"]
documentation = "https://docs.rs/reroute"
license = "MIT"

[dependencies]
hyper = "0.13"
regex = "1.3"
smallvec = "1.2"

[dev-dependencies]
lazy_static = "1.4"
tokio = { version = "0.2", features = ["full"] }
